<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="529dp"

        android:background="?attr/colorPrimary"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="#000000"
        app:theme="@style/Login_Page"
        app:title="Sign Up"

        app:titleTextColor="#000000" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="13dp"
        android:text="@string/emailForSignUp"
        app:layout_constraintBottom_toTopOf="@+id/EmailBox"
        app:layout_constraintStart_toStartOf="@+id/NameBox"
        app:layout_constraintTop_toBottomOf="@+id/NameBox"
        tools:text="@string/email" />

    <EditText
        android:id="@+id/EmailBox"
        android:layout_width="253dp"
        android:layout_height="49dp"
        android:layout_marginBottom="17dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/PasswordText"
        app:layout_constraintStart_toStartOf="@+id/EmailText"
        app:layout_constraintTop_toBottomOf="@+id/EmailText" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/email_box_SignUp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordBox"
        app:layout_constraintStart_toStartOf="@+id/EmailBox"
        app:layout_constraintTop_toBottomOf="@+id/EmailBox"
        tools:text="@string/password" />

    <EditText
        android:id="@+id/PasswordBox"
        android:layout_width="253dp"
        android:layout_height="49dp"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/CreateAccountButton"
        app:layout_constraintStart_toStartOf="@+id/PasswordText"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText" />

    <TextView
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="17dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/NameBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccount" />

    <EditText
        android:id="@+id/NameBox"
        android:layout_width="253dp"
        android:layout_height="49dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/EmailText"
        app:layout_constraintStart_toStartOf="@+id/NameText"
        app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <TextView
        android:id="@+id/CreateAccount"
        android:layout_width="231dp"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/NameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/CreateAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="193dp"
        android:text="@string/createAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordBox" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>