<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/SignOutButton"
        android:layout_width="221dp"
        android:layout_height="0dp"
        android:layout_marginBottom="298dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ResetPasswordButton"
        app:layout_constraintStart_toStartOf="@+id/ResetPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/ResetPasswordButton" />

    <Button
        android:id="@+id/StartQuizButton"
        android:layout_width="221dp"
        android:layout_height="0dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="22dp"
        android:text="@string/start_quiz"
        app:layout_constraintBottom_toTopOf="@+id/ResetPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ResetPasswordButton"
        android:layout_width="221dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toTopOf="@+id/SignOutButton"
        app:layout_constraintEnd_toEndOf="@+id/StartQuizButton"
        app:layout_constraintStart_toStartOf="@+id/StartQuizButton"
        app:layout_constraintTop_toBottomOf="@+id/StartQuizButton" />

</androidx.constraintlayout.widget.ConstraintLayout>